# LeafDeseaseClassifier

./: .gitignore  Pipfile  README.md  pyproject.toml
Docker/: docker-compose.yaml  gateway.dockerfile  model-serve.dockerfile  tf-serving.dockerfile
config/: train_params.yaml
data/: meta.csv  simple_submission.csv
notebooks/: baseline.ipynb  resnet50_augumentation.ipynb  resnet50_tuning.ipynb  xception_tuning.ipynb
src/: predict.py  preprocessing.py  test_app.py  train.py
src/leafdeseaseclassifier/: predict.py  preprocessing.py  train.py
src/serve/: Pipfile  gateway.py  proto.py
src/service/: Pipfile  gateway.py
