[tool.poetry]
name = "leafdeseaseclassifier"
version = "0.1.0"
description = ""
authors = ["Dmitry Karpuk dimakarpuk22@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
